--- a/Public/CSS/styles.css
+++ b/Public/CSS/styles.css
@@ -15,93 +15,7 @@
     background-image: -webkit-linear-gradient(#AFBEFA, #FFAFDE);
     background-repeat: no-repeat;
 }
-#boxLoading {
-    position: absolute;
-    display: block;
-    left: calc(50% - 24px);
-    top: calc(40% - 24px);
-}
-
-.loader {
-    width: 48px;
-    height: 48px;
-    display: inline-block;
-    position: relative;
-    transform: rotate(45deg);
-}
-
-.loader::before {
-    content: '';  
-    box-sizing: border-box;
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    left: 0;
-    top: -24px;
-    animation: animloader 4s ease infinite;
-}
-
-.loader::after {
-    content: '';  
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 24px;
-    height: 24px;
-    background: rgba(255, 255, 255, 0.85);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-    animation: animloader2 2s ease infinite;
-}
-  
-@keyframes animloader {
-    0% {
-      box-shadow: 0 24px rgba(255, 255, 255, 0), 24px 24px rgba(255, 255, 255, 0), 24px 48px rgba(255, 255, 255, 0), 0px 48px rgba(255, 255, 255, 0);
-    }
-    12% {
-      box-shadow: 0 24px white, 24px 24px rgba(255, 255, 255, 0), 24px 48px rgba(255, 255, 255, 0), 0px 48px rgba(255, 255, 255, 0);
-    }
-    25% {
-      box-shadow: 0 24px white, 24px 24px white, 24px 48px rgba(255, 255, 255, 0), 0px 48px rgba(255, 255, 255, 0);
-    }
-    37% {
-      box-shadow: 0 24px white, 24px 24px white, 24px 48px white, 0px 48px rgba(255, 255, 255, 0);
-    }
-    50% {
-      box-shadow: 0 24px white, 24px 24px white, 24px 48px white, 0px 48px white;
-    }
-    62% {
-      box-shadow: 0 24px rgba(255, 255, 255, 0), 24px 24px white, 24px 48px white, 0px 48px white;
-    }
-    75% {
-      box-shadow: 0 24px rgba(255, 255, 255, 0), 24px 24px rgba(255, 255, 255, 0), 24px 48px white, 0px 48px white;
-    }
-    87% {
-      box-shadow: 0 24px rgba(255, 255, 255, 0), 24px 24px rgba(255, 255, 255, 0), 24px 48px rgba(255, 255, 255, 0), 0px 48px white;
-    }
-    100% {
-      box-shadow: 0 24px rgba(255, 255, 255, 0), 24px 24px rgba(255, 255, 255, 0), 24px 48px rgba(255, 255, 255, 0), 0px 48px rgba(255, 255, 255, 0);
-    }
-}
-  
-@keyframes animloader2 {
-    0% {
-      transform: translate(0, 0) rotateX(0) rotateY(0);
-    }
-    25% {
-      transform: translate(100%, 0) rotateX(0) rotateY(180deg);
-    }
-    50% {
-      transform: translate(100%, 100%) rotateX(-180deg) rotateY(180deg);
-    }
-    75% {
-      transform: translate(0, 100%) rotateX(-180deg) rotateY(360deg);
-    }
-    100% {
-      transform: translate(0, 0) rotateX(0) rotateY(360deg);
-    }
-}
-      
+ 
 
 #boxSuprema {
     position: absolute;
@@ -126,7 +40,6 @@
     position: relative;
     display: block;
     width: 100%;
-    border: solid #f9f9f9 1px;
     border-radius: 100%;
 }
 
@@ -147,12 +60,11 @@
     display: inline-flex;
     width: 15vh;
     height: 30%;
-    background-color:#AFBEFA;
+    background-color: #FFAFDE;
     margin-top: 5%;
     border-radius: 8px;
     justify-content: center;
     align-items: center; 
-    border: solid 1px white;
     cursor: pointer;
     transition: all ease-in-out 0.3s;
 }
@@ -164,7 +76,7 @@
     margin-right: 0.6vh;
 }
 .btn:hover {
-    background-color: #FFAFDE;
+    background-color: #7c8ccc;
 }
 
 a {
