--- a/Public/CSS/styles.css
+++ b/Public/CSS/styles.css
@@ -40,6 +40,7 @@
     position: relative;
     display: block;
     width: 100%;
+    border: solid 0.5px #c4a7e7;
     border-radius: 100%;
 }
 
@@ -60,7 +61,7 @@
     display: inline-flex;
     width: 15vh;
     height: 30%;
-    background-color: #FFAFDE;
+    background-color: #AFBEFA;
     margin-top: 5%;
     border-radius: 8px;
     justify-content: center;
