--- a/Public/CSS/styles.css
+++ b/Public/CSS/styles.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Galindo&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap');
 
 * {
     text-decoration: none;
