--- a/Public/CSS/styles.css
+++ b/Public/CSS/styles.css
@@ -67,33 +67,26 @@
     display: inline-flex;
     width: 15vh;
     height: 25%;
-    background-color: #222138;
     margin-top: 5%;
     color: var(--text-color);
-    border-radius: 8px;
     justify-content: center;
     align-items: center; 
     cursor: pointer;
     border: solid 1px var(--img-bg);
-    transition: all ease-in-out 0.3s;
     margin-right: 1vh;
+    background: linear-gradient(to right, var(--text-color) 50%, var(--bg-color) 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    transition: all .5s ease-out;
 }
 
 .btn i {
     margin-right: 1vh;
 }
 
-.btn:nth-child(1) i {
-    margin-right: 0.6vh;
-}
-
 .btn:hover {
-    background-color: var(--text-color);
+    background-position: left bottom;
     color: var(--bg-color);
-}
-
-.btn:nth-child(3) {
-    margin-right: 0;
 }
 
 a {
