--- a/Public/CSS/styles.css
+++ b/Public/CSS/styles.css
@@ -1,5 +1,3 @@
-@import url('/Public/Fonts/ThicccBoy/font.css');
-
 :root {
     --bg-color: #222138;
     --img-bg: #e0def4;
@@ -8,87 +6,63 @@
     --btn-color: #9EB9C0;
 }
 
-* {
-    text-decoration: none;
+body {
+    background-color: var(--bg-color);
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
 }
 
-#bgAll {
+#bg {
     position: absolute;
     display: block;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    overflow-x: visible;
     background-image: url(/Public/Assets/Images/bg.svg);
-    background-position: 0;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: 0;
 }
- 
 
-#boxSuprema {
+header {
     position: absolute;
-    display: block;
-    top: 10%;
+    color: var(--text-color);
+    top: 20%;
     left: calc(50% - 40%);
     width: 80%;
-    height: 60%;
-}
-
-#containerAvatar {
-    position: absolute;
-    display: block;
-    top: 0;
-    left: calc(50% - 12.5vh);
-    width: 25vh;
-    height: auto;
-    margin-bottom: 0;
-}
-
-#avatar {
-    -webkit-user-drag: none;
-    -moz-user-select: none; 
-    user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    position: relative;
-    display: block;
-    width: 100%;
-    border: solid 0.5px var(--img-bg);
-    border-radius: 100%;
-}
-
-#boxText {
-    position: fixed;
-    display: block;
-    left: calc(50% - 30%);
-    top: calc(50% - 10%);
-    width: 60%;
-    height: 20%;
-    color: var(--text-color);
-    font-family: 'ThicccBoyRegular';
-    font-size: 2.5vh;
+    padding-left: 5px;
+    padding-right: 5px;
     text-align: center;
 }
 
-.btn {
-    position: relative;
-    display: inline-flex;
-    width: 6vh;
-    height: 25%;
-    margin-top: 5%;
+h1 {
+    font-size: 3rem;
+    margin-bottom: 4vh;
+}
+
+p {
+    font-size: 3vh;
+    font-family: 'Roboto', sans-serif;
+}
+
+button {
+    border: none;
+    border-radius: 8px;
+    margin-top: 1vh;
+    width: 8vh;
+    height: 8vh;
+    background-color: transparent;
+    font-size: 2.5vh;
     color: var(--text-color);
-    justify-content: center;
-    align-items: center; 
     cursor: pointer;
-    margin-right: 1vh;
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
-.btn:hover {
-    color: var(--btn-color);
+button:hover {
+    color: var(--snow-color);
 }
-
 
 a {
     text-decoration: none;
@@ -96,7 +70,7 @@ a {
 
 img.emoji {
     -webkit-user-drag: none;
-    -moz-user-select: none; 
+    -moz-user-select: none;
     user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -106,63 +80,18 @@ img.emoji {
     vertical-align: -0.1em;
 }
 
-.fallingSnow {
-    height: var(--w);
-    width: var(--w);
-    background-color: var(--snow-color);
-    border-radius: 100%;
-    opacity: var(--o);
-}
-
-#snowflakes {
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 9999;
-    pointer-events:none;
-}
-
-.snowflake {
-    font-size: 1em;
-    flex: 1;
-    position: relative;
-    top: -10%;
-    animation: snowflakes-fall 10s linear, snowflakes-shake 3s ease-in-out;
-    animation-delay: var(--d);
-    animation-iteration-count: infinite;
-}
-
-#linearColor {
-    position: fixed;
-    display: block;
-    background-color: var(--img-bg);
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 1.5vh;
-}
-
-@keyframes snowflakes-fall {
-    100% {
-        top: 100%;
-    }
-}
-
-@keyframes snowflakes-shake {
-    50% {
-        transform: translateX(80px);
-    }
-}
-
 ::-moz-selection {
     color: var(--bg-color);
     background: var(--text-color);
 }
-  
+
 ::selection {
     color: var(--bg-color);
     background: var(--text-color);
+}
+
+@media only screen and (max-width: 330px) {
+    h1 {
+        font-size: 2.5em;
+    }
 }
