--- a/Public/CSS/404.css
+++ b/Public/CSS/404.css
@@ -1,5 +1,3 @@
-@import url('/Public/Fonts/ThicccBoy/font.css');
-
 :root {
     --bg-color: #222138;
     --img-bg: #e0def4;
@@ -42,6 +40,19 @@ h3 {
     text-align: center;
     top: 5em;
 }
+
+img.emoji {
+    -webkit-user-drag: none;
+    -moz-user-select: none;
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    height: 1em;
+    width: 1em;
+    margin: 0 .05em 0 .1em;
+    vertical-align: -0.1em;
+}
+
 
 ::-moz-selection {
     color: var(--bg-color);
