--- a/public/CSS/404.css
+++ b/public/CSS/404.css
@@ -12,7 +12,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(/public/Assets/Images/bg.svg);
+    background-image: url(/Assets/Images/bg.svg);
     background-position: 0;
     background-repeat: no-repeat;
     background-size: cover;
