--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -20,7 +20,7 @@ body {
     width: 100%;
     height: 100%;
     overflow-x: visible;
-    background-image: url(/public/Assets/Images/bg.svg);
+    background-image: url(/Assets/Images/bg.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0;
