--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const age = Math.abs(g.getUTCFullYear() - 1970)
 
 <Layout title="@NotGabry">
     <header>
-        <h1>@NotGabry</h1>
+        <h1>@notgabry</h1>
         <p>
             <img
                 draggable="false"
