--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,18 +1,3 @@
 ---
-import Layout from '@layouts/Layout.astro'
+return Astro.redirect('/')
 ---
-
-<Layout title="404 - Not found" stylesheet="404">
-    <div id="container">
-        <h1>404</h1>
-        <h3>
-            <img
-                draggable="false"
-                class="emoji"
-                alt="🧪"
-                src="https://twemoji.maxcdn.com/v/14.0.2/72x72/1f9ea.png"
-            />
-            <strong>Page not found</strong>
-        </h3>
-    </div>
-</Layout>
