fix: reducing length of commit command sha and adding status to api@

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ import '../styles/input.css'
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css" />
     </head>
 
-    <body class="bg-p-bg max-w-xl mx-auto font-young-seri">
+    <body class="bg-p-bg max-w-xl mx-auto">
         <slot />
     </body>
 </html>
