fix: Astro.url not working when build

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const commit: { html_url: string; sha: string } = await fetch('https://api.githu
                 <br />
                  In my spare time when I want to relax I play videogames like <Mark>Valorant</Mark> or <Mark>Sea of Thieves</Mark>
             </p>
-            <Presence url={Astro.url} client:load />
+            <Presence client:load />
         </section>
 
         <section class="mt-6">
