--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,8 +10,8 @@ import '../styles/input.css'
         <title>{title}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="generator" content={Astro.generator} />
-        <link rel="icon" href="https://cdn.inertiah.uno/gabry-icon.png" />
-        <link rel="shortcut icon" href="https://cdn.inertiah.uno/gabry-icon.png" />
+        <link rel="icon" href="/gabry-icon.png" />
+        <link rel="shortcut icon" href="/gabry-icon.png" />
 
         <meta property="og:title" content="NotGabry" />
         <meta property="og:description" content="Minimalism ❤" />
@@ -19,7 +19,7 @@ import '../styles/input.css'
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Poppins&family=Young+Serif&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Young+Serif&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css" />
     </head>
 
