fix: spotify instead of discord presence

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,13 +36,18 @@ const commit: { html_url: string; sha: string } = await fetch('https://api.githu
                 For performance related problems I switched to linux {linux} years ago and even if now I have Windows on dual-boot (for playing videogames) I never came back to Windows as my main os. In this lil period of time i tried different linux distros like <Mark>Ubuntu 20</Mark>, <Mark>Manjaro</Mark>, <Mark>Arch</Mark>, <Mark>Kali</Mark> and <Mark>Linux Mint</Mark> the one I'm using right now.
                 <br />
                  In my spare time when I want to relax I play videogames like <Mark>Valorant</Mark> or <Mark>Sea of Thieves</Mark>
+                <br />
+                 I can't play or study without music, feel free to check out one of my most recent played songs...
             </p>
             <Presence client:load />
         </section>
 
         <section class="mt-6">
             <h3 class="font-young-serif text-2xl text-p-text underline decoration-wavy decoration-p-underline">Skills</h3>
-            <p class="font-josefin text-p-text">I've lots of experience with <Mark>JavaScript</Mark> and <Mark>TypeScript</Mark> also I practiced <Mark>Python</Mark> for over a year, I'm recently moving my focus to <Mark>Go</Mark> and <Mark>Rust</Mark>.Go check out my top projects on <a class="underline text-pink-200 font-space" href="/projects"><i class="fa-solid fa-location-arrow mr-1"></i>github</a></p>
+            <p class="font-josefin text-p-text">
+                I've lots of experience with <Mark>JavaScript</Mark> and <Mark>TypeScript</Mark> also I practiced <Mark>Python</Mark> for over a year, I'm recently moving my focus to <Mark>Go</Mark> and <Mark>Rust</Mark>. <br />
+                 Go check out my top projects on <a class="underline text-pink-200 font-space" href="/projects"><i class="fa-solid fa-location-arrow mr-1"></i>github</a>
+            </p>
         </section>
     </main>
 
