fix: colors, padding, href

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -3,7 +3,7 @@ const { description } = Astro.props
 ---
 
 <div class="mx-auto inline-block">
-    <img src="/gabry.png" alt="cat avatar" class="max-w-[9rem] rounded-full border-white border-spacing-6 border p-1 transition hover:animate-spin cursor-wait" draggable="false" />
+    <a href="/"><img src="/gabry.png" alt="cat avatar" class="max-w-[9rem] rounded-full border-white border-spacing-6 border p-1 transition hover:animate-spin cursor-wait" draggable="false" /></a>
 </div>
 <h1 class="text-4xl text-p-text text-center">notgabry</h1>
 <p class="text-lg bg-p-secondary rounded inline-block px-2 text-p-text-secondary mt-1">{description}</p>
