--- a/src/components/Repo.astro
+++ b/src/components/Repo.astro
@@ -10,7 +10,7 @@ const { url, name, language, description, stars } = Astro.props
             <p class="text-p-text-secondary truncate">{description || 'No Description.'}</p>
         </div>
 
-        <div class="flex-col text-right">
+        <div class="flex-col text-right py-1">
             <p class="text-md text-p-text">
                 {stars}
                 <i class="fa-solid fa-star ml-1 text-p-star"></i>
