--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,6 @@ import Presence from '@components/Presence.svelte'
 import GenerateDynDate from '@modules/GenerateDynDate'
 
 const age = GenerateDynDate(new Date(2007, 9, 12))
-const linux = GenerateDynDate(new Date(2021, 5, 11))
-
-const commit: { html_url: string; sha: string } = await fetch('https://api.github.com/repos/notgabry/gabryy.me/commits/main').then((a) => a.json())
 ---
 
 <Layout title="notgabry">
@@ -26,18 +23,18 @@ const commit: { html_url: string; sha: string } = await fetch('https://api.githu
         <section class="mt-6">
             <h3 class="font-young-serif text-2xl text-p-text underline decoration-wavy decoration-p-underline">About Me</h3>
             <p class="font-josefin text-p-text">
-                I'm a {age}-year-old developer from Italy. Ever since I was little I've always been passionate about computers and how they operate, now I'm learning new technologies or programming languages, like <Mark>Go</Mark> and <Mark>Rust</Mark> the two programmming languages I am currently focussing on.
+                I'm a {age}-year-old developer from Italy. Ever since I was little I've always been passionate about computers and how they operate, now I'm learning new technologies or programming languages, like <Mark>Go</Mark> and <Mark>Rust</Mark> the two programmming languages I love the most.
             </p>
         </section>
 
         <section class="mt-6">
             <h3 class="font-young-serif text-2xl text-p-text underline decoration-wavy decoration-p-underline">Interests</h3>
             <p class="font-josefin text-p-text">
-                For performance related problems I switched to linux {linux} years ago and even if now I have Windows on dual-boot (for playing videogames) I never came back to Windows as my main os. In this lil period of time i tried different linux distros like <Mark>Ubuntu 20</Mark>, <Mark>Manjaro</Mark>, <Mark>Arch</Mark>, <Mark>Kali</Mark> and <Mark>Linux Mint</Mark> the one I'm using right now.
+                I've half a decade of experience with linux, I've tried different linux distros like <Mark>Ubuntu 20</Mark>, <Mark>Manjaro</Mark>, <Mark>Arch</Mark>, <Mark>Kali</Mark> and <Mark>Linux Mint</Mark> the one I'm using right now.
                 <br />
-                 In my spare time when I want to relax I play videogames like <Mark>Valorant</Mark> or <Mark>Sea of Thieves</Mark>
+                In my spare time when I want to relax I play videogames like <Mark>Valorant</Mark>
                 <br />
-                 I can't play or study without music, feel free to check out one of my most recent played songs...
+                I can't play without music, feel free to check out one of my most recent played songs...
             </p>
             <Presence client:load />
         </section>
@@ -46,14 +43,8 @@ const commit: { html_url: string; sha: string } = await fetch('https://api.githu
             <h3 class="font-young-serif text-2xl text-p-text underline decoration-wavy decoration-p-underline">Skills</h3>
             <p class="font-josefin text-p-text">
                 I've lots of experience with <Mark>JavaScript</Mark> and <Mark>TypeScript</Mark> also I practiced <Mark>Python</Mark> for over a year, I'm recently moving my focus to <Mark>Go</Mark> and <Mark>Rust</Mark>. <br />
-                 Go check out my top projects on <a class="underline text-pink-200 font-space" href="/projects"><i class="fa-solid fa-location-arrow mr-1"></i>github</a>
+                Go check out my top projects on <a class="underline text-pink-200 font-space" href="/projects"><i class="fa-solid fa-location-arrow mr-1"></i>/projects</a>
             </p>
         </section>
     </main>
-
-    <hr class="my-6 border-gray-600 mx-6" />
-    <footer class="mx-6 font-josefin font-bold mb-10 text-gray-500">
-        <p class="text-md">📃 Code under <a href="https://github.com/NotGabry/gabryy.me/blob/main/LICENSE" class="decoration-dashed hover:underline">MIT</a> license.</p>
-        <p class="text-md">🍁 GitHub Commit <a class="decoration-dashed hover:underline" href={commit.html_url}>{String(commit.sha || '00000').substring(0, 5)}.</a></p>
-    </footer>
 </Layout>
